--- a/makefile.unix
+++ b/makefile.unix
@@ -14,10 +14,10 @@
 # These flags assume you have libpng, libjpeg, libtiff and libgif installed. If
 # not, either follow the install instructions below or just comment out the next
 # four lines.
-EXTRA_FLAGS= -DWEBP_HAVE_PNG -DWEBP_HAVE_JPEG -DWEBP_HAVE_TIFF
-DWEBP_LIBS= -lpng -lz
-CWEBP_LIBS= $(DWEBP_LIBS) -ljpeg -ltiff
-GIF_LIBS = -lgif
+#EXTRA_FLAGS= -DWEBP_HAVE_PNG -DWEBP_HAVE_JPEG -DWEBP_HAVE_TIFF
+#DWEBP_LIBS= -lpng -lz
+#CWEBP_LIBS= $(DWEBP_LIBS) -ljpeg -ltiff
+#GIF_LIBS = -lgif
 
 ifeq ($(strip $(shell uname)), Darwin)
   # Work around a problem linking tables marked as common symbols,
@@ -58,8 +58,8 @@ endif
 # EXTRA_FLAGS += -DWEBP_SWAP_16BIT_CSP
 
 # Extra flags to enable multi-threading
-EXTRA_FLAGS += -DWEBP_USE_THREAD
-EXTRA_LIBS += -lpthread
+#EXTRA_FLAGS += -DWEBP_USE_THREAD
+#EXTRA_LIBS += -lpthread
 
 # Extra flags to emulate C89 strictness with the full ANSI
 EXTRA_FLAGS += -Wextra -Wold-style-definition
